# DataStructureImplementingC

./: CMakeLists.txt  README.md  init.c  main.c
Chapter1/: ClassNote.md  MasterTheory.md  StuFavouredPolicy.h
Chapter2/: Circular_Linked_List.h  ClassNote2.md  Cricular_Linked_List.h  DoublyLinkedList.h  DoublylinkedList.h  LinkedList.h  Sequential_List.h  StaticLinkedLisk.h  StaticLinkedList.h  第二章 线性结构作业.md
Chapter2/Questions/: SortByAccessFrequency.c  SortByAccessFrequency.h  question.md  单链表操作的实现.md
Chapter2/Questions/City_Management/: CityManagement.h  城市链表.md
Chapter2/Questions/Josephs problem/: JosephsProblem.h
Chapter2/Questions/Josephus problem/: JosephusProblem.h  约瑟夫环.md
Chapter2/Questions/SortByAccessFrequency/: SortByAccessFrequency.c  SortByAccessFrequency.h
Chapter2/README/: ClassNote.md  questions.md  第二章 线性结构作业.md
Chapter3/: Queue.h  QueueImitationByStack.h  Stack.h  TwinStack.h  main.c  第三章 栈和队列作业.md
Chapter3/Experiments/ParkingLot Management/: ParkingLot Management.md  ParkingLot_Management.h
Chapter3/Experiments/Product ManageMent/: Product Management.md  Product_Management.h
Chapter3/Experiments/Stack and Queue Wrapper/: Stack and Queue.md
Chapter3/Questions/: Questions on class of chapter 3.md
Chapter3/Questions/HanoiTower/: HanoiTower.h
Chapter3/Questions/ParenthesesProblem/: Parentheses.h
Chapter3/Questions/RPN/: RPN.h  逆波兰表达式.md
Chapter3/Questions/TrainTrans/: TrainTrans.h
Chapter4/: KMP算法.md  String.h  locate_sub.h
Chapter4/strStr/: strStr.h  实现 strStr().md
Chapter5/: Arrays.h  General_List.h  Orthogonal sparse matrix.h  Sparse_Matrix.h
Chapter6/: BinaryTree.cuh  BinaryTree.h  Tree_Child_Sibling.h  Tree_Seq.h  main.c
Chapter6/AVL Tree/: IsAVL.h  平衡二叉树判断.md
Chapter6/Binary Tree/: BinTree_Thread.h  BinaryTree_Array.h  BinaryTree_Link.h
Chapter6/Binary Tree/BinTreeTraverse/: BinTreeTraverse.h  LevelTraverse.h
Chapter6/Binary Tree/BinTreeTraverse/ques/: 二叉树的前序遍历.md
Chapter6/Binary Tree/Rebuild_BinTree/: PreOrderTransverse.h  TreeRebuild.h  二叉树的前序遍历.md  已知前序、中序遍历结果，还原二叉树.md
Chapter6/Binary Tree/TreeUtils/: BinTreeUtils.h  ModifyTreeLeaves.h
Chapter6/Experiment/: 设计实验：Huffman tree的实现.md  验证实验：二叉树的遍历.md
Chapter6/Experiment/Traverse/: Exp_Traverse.h  验证实验：二叉树的遍历.md
Chapter6/HuffManTree/: HuffManTree.h  HuffManTreeDecoding.h  HuffManTreeEncoding.h  Huffman_disp.h  Huffman_output.h  Huffman_process.h  Huffman_wrapper.h  设计实验：Huffman tree的实现.md
Chapter7/: AdjacentMatrixGraph.h  Graph.h  main.c
Chapter7/Experiment/: TSP.md  实验1：图的建立与遍历.md  实验2：最小生成树.md  实验3：导游问题.md
Chapter7/Experiment/Graph Traverse/: Exp_Traverse.h
Chapter7/Experiment/Tourist guide/: Tourist_Guide.h
Chapter7/Experiment/Traveling Salesman Problem/: TSP.h  TSP_dynamic_planning.h  TSP_greedy_method.h
Chapter7/Experiment/build mst/: Exp_MST.h
Chapter7/GraphTraverse/: BFS.h  DFS.h
Chapter7/MinimumCostSpanningTree/: KruskalAlgorithm.h  PrimAlgorithm.h
Chapter7/MinimumLengthPath/: FloydAlgorithm.h  FolydAlgorithm.h  Hamiltonian_Algorithm.h
Chapter7/MinimumLenthPath/: DijkstraAlgorithm.h  FolydAlgorithm.h
Chapter7/leastLenthPath/: DijkistraAlgorithm.h  FolydAlgorithm.h
External Problems/: 1.寻找两个正序数组的中位数.md  IsMatch_RegulaExpression.h  main.c  寻找比目标字母大的最小字母.md  正则表达式匹配.md  自除数.md
External Problems/CanReorderDoubled/: CanReorderedDoubled.h  二倍数对数组.md
External Problems/Examination/: Calc_num.h  计算字符串中的数字数.md
External Problems/Os/BankerResourceDispatch/: BankerResourceDispatch.h  死锁算法：银行家算法.md
External Problems/Os/HRRF/: HRRF.h
External Problems/Os/IPC/: IPC.h  IPC代码示例.md
External Problems/RomanToInt/: RomanToInt.h  罗马数字转整数.md
External Problems/SelfDivide/: SelfDivideNumbers.h  自除数.md
External Problems/SleepingBarber/: Sleeping barber problem.md
External Problems/UnDone/: findMedianSortedArrays.h
Mid Term Examination/: MidTermQues.h
Os/: Linux调度.md
Os/BankerResourceDispatch/: BankerResourceDispatch.h  死锁算法：银行家算法.md
Os/HRRF/: HRRF.h
Os/SleepingBarber/: Sleeping_Barber.h
